@@ -34,20 +34,35 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
 
     private String m_sID;
     private String m_sName;
+    private String taxcategoryid;
+    private String taxcustcategoryid;
+    private String parentid;
+    
     private double m_dRate;
+    private boolean cascade;
     
     /** Creates new TaxInfo */
     public TaxInfo() {
         m_sID = null;
         m_sName = null;
+        taxcategoryid = null;
+        taxcustcategoryid = null;
+        parentid = null;
+        
         m_dRate = 0.0;         
+        cascade = false;
     }
     
     /** Creates new TaxInfo */
     public TaxInfo(String sID, String sName, double dRate) {
         m_sID = sID;
         m_sName = sName;
-        m_dRate = dRate;         
+        taxcategoryid = null;
+        taxcustcategoryid = null;
+        parentid = null;
+        
+        m_dRate = dRate;
+        cascade = false;
     }
     
     public Object getKey() {
@@ -56,12 +71,22 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
     public void readValues(DataRead dr) throws BasicException {
         m_sID = dr.getString(1);
         m_sName = dr.getString(2);
-        m_dRate = dr.getDouble(3).doubleValue();
+        taxcategoryid = dr.getString(3);
+        taxcustcategoryid = dr.getString(4);
+        parentid = dr.getString(5);
+        
+        m_dRate = dr.getDouble(6).doubleValue();
+        cascade = dr.getBoolean(7).booleanValue();
     }   
     public void writeValues(DataWrite dp) throws BasicException {
         dp.setString(1, m_sID);
         dp.setString(2, m_sName);
-        dp.setDouble(3, new Double(m_dRate));
+        dp.setString(3, taxcategoryid);
+        dp.setString(4, taxcustcategoryid);
+        dp.setString(5, parentid);
+        
+        dp.setDouble(6, new Double(m_dRate));
+        dp.setBoolean(7, Boolean.valueOf(cascade));
     }
     
     public void setID(String sID) {
@@ -79,6 +104,30 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
     public void setName(String sName) {
         m_sName = sName;
     }
+
+    public String getTaxCategoryID() {
+        return taxcategoryid;
+    }
+    
+    public void setTaxCategoryID(String value) {
+        taxcategoryid = value;
+    }
+
+    public String getTaxCustCategoryID() {
+        return taxcustcategoryid;
+    }
+    
+    public void setTaxCustCategoryID(String value) {
+        taxcustcategoryid = value;
+    }    
+
+    public String getParentID() {
+        return parentid;
+    }
+    
+    public void setParentID(String value) {
+        parentid = value;
+    }
     
     public double getRate() {
         return m_dRate;
@@ -88,6 +137,14 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
         m_dRate = dValue;
     }
 
+    public boolean isCascade() {
+        return cascade;
+    }
+    
+    public void setCascade(boolean value) {
+        cascade = value;
+    }
+    
     @Override
     public String toString(){
         return m_sName;
@@ -114,6 +171,30 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
                 if (!m_sName.equals(t.m_sName)) return false;
             }          
             
+            // tax category ID
+            if (taxcategoryid == null) {
+                if (t.taxcategoryid != null) return false;
+            } else {
+                if (!taxcategoryid.equals(t.taxcategoryid)) return false;
+            }   
+            
+            // tax cust category ID
+            if (taxcustcategoryid == null) {
+                if (t.taxcustcategoryid != null) return false;
+            } else {
+                if (!taxcustcategoryid.equals(t.taxcustcategoryid)) return false;
+            } 
+            
+            // Parent ID
+            if (parentid == null) {
+                if (t.parentid != null) return false;
+            } else {
+                if (!parentid.equals(parentid)) return false;
+            } 
+            
+            // Cascade
+            if (cascade != t.cascade) return false;
+            
             // el porcentage
             if (m_dRate != t.m_dRate) return false;
             
@@ -125,6 +206,12 @@ public class TaxInfo implements SerializableRead, SerializableWrite, Serializabl
     
     @Override
     public int hashCode() {      
-        return (m_sID == null ? 0 : m_sID.hashCode()) + (m_sName == null ? 0 : m_sName.hashCode()) + new Double(m_dRate).hashCode();
+        return (m_sID == null ? 0 : m_sID.hashCode()) 
+                + (m_sName == null ? 0 : m_sName.hashCode()) 
+                + (taxcategoryid == null ? 0 : taxcategoryid.hashCode()) 
+                + (taxcustcategoryid == null ? 0 : taxcustcategoryid.hashCode()) 
+                + (parentid == null ? 0 : parentid.hashCode()) 
+                + new Double(m_dRate).hashCode()
+                + Boolean.valueOf(cascade).hashCode();
     }    
 }
